target/debug/build/crossbeam-utils-469ccbaa1792eac9/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/kriger/.asdf/installs/rust/1.72.1/toolchains/1.72.1-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2927:1
     |
2927 | / atomic_int! {
2928 | |     cfg(target_has_atomic = "16"),
2929 | |     cfg(target_has_atomic_equal_alignment = "16"),
2930 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2944 | |     u16 AtomicU16 ATOMIC_U16_INIT
2945 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
